umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_methyl-isocyanide.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: functional_groups
atom_typing:
  success: true
  summary:
    atom_count: 3
    bond_count: 2
    topology: Bg
    atoms:
      - "C#h3#v"
      - "N#c+#v4"
      - "C#c-#n#v3"
    bonds:
      - "-"
      - "#"
counts:
  success: true
  summary:
    atom_count: 3
    bond_count: 2
    topology: Bg
    atoms:
      - "C#h3#v"
      - "N#c+#v4"
      - "C#c-#n#v3"
    bonds:
      - "-"
      - "#"
