umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_methyl-nitrite.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: functional_groups
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cd
    atoms:
      - "{CH3v1}"
      - "{O/2v2}"
      - "{N/1v3}"
      - "{O/2v2}"
    bonds:
      - "-"
      - "-"
      - "="
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cd
    atoms:
      - "{CH3v1}"
      - "{O/2v2}"
      - "{N/1v3}"
      - "{O/2v2}"
    bonds:
      - "-"
      - "-"
      - "="
