umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_methyl-thiocyanate.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "C#h3#v" "1" "S#n2#v2" "2" "C#v4" "3" "N#n#v3"} :bonds [["0" "1" "1"] ["1" "2" "1"] ["2" "3" "3"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "C#h3#v" "1" "S#n2#v2" "2" "C#v4" "3" "N#n#v3"} :bonds [["0" "1" "1"] ["1" "2" "1"] ["2" "3" "3"]] :charge 0 :spin "#u0 #s1"}}}
